--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
         <!-- title -->
-        <title>LeadGen - Multipurpose Marketing Landing Page Pack with Page Builder</title>
+        <title>Juhi's Getaway! 💪🏻
+        </title>
         <meta name="description" content="lgdescription" />
         <meta name="keywords" content="lgkeywords" />
         <meta name="author" content="lgauthor">
