--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                         <!-- end social elements -->
                         <div class="col-md-12 col-sm-12 col-xs-12 display-table margin-six-top">
                             <div class="display-table-cell-vertical-middle text-center border-top-light padding-six-top tz-border">
-                                <span class="text-extra-small tz-text text-blue-gray">© 2016 LEADGEN IS PROUDLY POWERED BY <a class="text-blue-gray" href="http://www.themezaa.com/">THEMEZAA.</a></span>
+                                <span class="text-extra-small tz-text text-blue-gray"><a class="text-blue-gray" href="http://www.themezaa.com/">THEMEZAA.</a></span>
                             </div>
                         </div>
                     </div>
