--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <nav class="navbar tz-header-bg no-margin alt-font navigation-menu dark-header">
                         <!-- logo -->
                         <div class="pull-left">
-                            <a href="#home" class="inner-link"><img alt="" src="images/logo-white.png" data-img-size="(W)163px X (H)40px"></a>
+                            <a href="#home" class="inner-link"><img alt="" src="images/icon/logo.png" data-img-size="(W)163px X (H)40px"></a>
                         </div>
                         <!-- end logo -->
                         <div class="pull-right">
