--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     <div class="row">
                         <!-- logo -->
                         <div class="col-md-3 col-sm-12 col-xs-12 sm-text-center sm-margin-five-bottom">
-                            <a href="#home" class="inner-link"><img src="images/logo-white.png" data-img-size="(W)163px X (H)40px" alt=""></a>
+                            <a href="#home" class="inner-link"><img src="images/icon/logo.png" data-img-size="(W)163px X (H)40px" alt=""></a>
                         </div>
                         <!-- end logo -->
                         <!-- caption -->
@@ -295,7 +295,7 @@
                         <!-- end social elements -->
                         <div class="col-md-12 col-sm-12 col-xs-12 display-table margin-six-top">
                             <div class="display-table-cell-vertical-middle text-center border-top-light padding-six-top tz-border">
-                                <span class="text-extra-small tz-text text-blue-gray"><a class="text-blue-gray" href="http://www.themezaa.com/">THEMEZAA.</a></span>
+                                <span class="text-extra-small tz-text text-blue-gray"><a class="text-blue-gray" href="http://www.themezaa.com/"></a></span>
                             </div>
                         </div>
                     </div>
