--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                                             <li class="html magento jquery xs-no-padding">
                                                 <figure>
                                                     <div class="gallery-img lightbox-gallery">
-                                                        <a href="images/agency-work-04.jpg" title=""><img src="images/agency-work-04.jpg" id="tz-bg-121" data-img-size="(W)800px X (H)650px" alt=""></a>
+                                                        <a href="images/1.jpg" title=""><img src="images/agency-work-04.jpg" id="tz-bg-121" data-img-size="(W)800px X (H)650px" alt=""></a>
                                                     </div>
                                                 </figure>
                                             </li>
@@ -232,7 +232,7 @@
                                             <li class="html wordpress magento xs-no-padding">
                                                 <figure>
                                                     <div class="gallery-img lightbox-gallery">
-                                                        <a href="images/agency-work-02.jpg" title=""><img src="images/agency-work-02.jpg" id="tz-bg-122" data-img-size="(W)800px X (H)650px" alt=""></a>
+                                                        <a href="images/2.jpg" title=""><img src="images/agency-work-02.jpg" id="tz-bg-122" data-img-size="(W)800px X (H)650px" alt=""></a>
                                                     </div>
                                                 </figure>
                                             </li>
